--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   conditional_builder_null_safety: ^0.0.6
   webview_flutter: ^4.2.4
   fluttertoast: ^8.2.2
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
